change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "php-amqplib/thumper",
+    "name": "softonic/thumper",
     "replace": {
         "videlalvaro/thumper": "self.version"
     },
